ensure content can scroll up behind fixed header

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,7 @@ header {
   border-radius: 20px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  z-index: 1000;
 }
 
 #nav {
@@ -77,7 +78,7 @@ header {
   align-items: flex-start;
   padding: 20px;
   width: calc(100% - 57px);
-  margin: 0 auto;
+  margin: 80px auto 0 auto;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
 }
